# cmake_minimum_required(VERSION 3.5)
# project(my_cv)

# find_package(ament_cmake REQUIRED)
# find_package(std_msgs REQUIRED)
# find_package(rosidl_default_generators REQUIRED)
# find_package(rclcpp REQUIRED) # C++ 용

# rosidl_generate_interfaces(${PROJECT_NAME}
#   "msg/LinePoint.msg"
#   "msg/LinePointsArray.msg"
#   DEPENDENCIES std_msgs
# )

# ament_package()
# ament_export_dependencies(rosidl_default_runtime)